# benchmark

./: CMakeLists.txt
scripts/: run.sh
src/: CMakeLists.txt  arma_no.cc  arma_opt1.cc  arma_opt2.cc  eigen.cc  timer.cc  timer.hpp
